--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -131,10 +131,28 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/details_empty_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/list_workmates_empty"
+        android:textColor="@color/light_grey"
+        android:textSize="28sp"
+        android:textStyle="italic"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/details_restaurant_bot" />
+
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/details_restaurant_workmates_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/details_restaurant_bot"
         tools:listitem="@layout/item_layout_workmates" />
 
