- Add loginWithusernameActivity and updade MapViewModel

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -51,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="16sp"
+                android:visibility="gone"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/side_menu_picture"
                 app:layout_constraintStart_toEndOf="@id/side_menu_picture"
@@ -61,6 +62,7 @@
                 android:id="@+id/side_menu_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:text="@string/drawer_header_email"
                 android:textColor="@color/white"
                 android:textSize="12sp"
