--- a/app/src/main/res/layout/item_layout_restaurant.xml
+++ b/app/src/main/res/layout/item_layout_restaurant.xml
@@ -84,6 +84,7 @@
                 android:id="@+id/item_restaurant_attendees"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawablePadding="5dp"
                 android:text="@string/item_restaurant_attendees"
                 android:textSize="14sp"
                 app:drawableStartCompat="@drawable/ic_people"
