- Add Autocomplete Api Call

--- a/app/src/main/res/layout/item_layout_restaurant.xml
+++ b/app/src/main/res/layout/item_layout_restaurant.xml
@@ -107,6 +107,7 @@
 
         </LinearLayout>
 
+
         <ImageView
             android:id="@+id/item_restaurant_pic"
             android:layout_width="100dp"
@@ -116,6 +117,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!--
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/item_restaurant_pic"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:actualImageResource="@drawable/ic_cutlery"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                    -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
